added indentity and file upload service

--- a/WorkPermitSystem/appsettings.json
+++ b/WorkPermitSystem/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WorkPermitContext": "Server=(localdb)\\mssqllocaldb;Database=WorkPermitDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
