--- a/WorkPermitSystem/WorkPermitSystem.csproj
+++ b/WorkPermitSystem/WorkPermitSystem.csproj
@@ -9,6 +9,18 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.S3" Version="3.7.104.23" />
     <PackageReference Include="AWSSDK.SimpleEmail" Version="3.7.100.136" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.16" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.16" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.16" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.16">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Aprover\Models\" />
+    <Folder Include="Models\DTOs\" />
   </ItemGroup>
 
 </Project>
